--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwindcss": "3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "rollup": "4.17.2"
   }
 }
